credit card completed

--- a/index.html
+++ b/index.html
@@ -24,6 +24,17 @@
             />
           </div>
         </div>
+        <div class="middle">
+          <p>CardNumber</p>
+          <h3>8023 2394 4543 1209</h3>
+        </div>
+        <div class="lower">
+          <div class="left"><h3>Himanshu Singh</h3></div>
+          <div class="right">
+            <p>Valid Time</p>
+            <p>05/28</p>
+          </div>
+        </div>
       </div>
     </div>
   </body>
